--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="./CSS/main.css">
     <link rel="stylesheet" href="./CSS/styles.css">
     <!--<style>
         a {text-decoration: none;}
@@ -357,8 +358,8 @@
                 <li class="form-item item">--> 
                     <label for="name" class="modal-form__label">Имя</label>
                     <div class="modal-form__field">
-                 <input type="text" class="form-input" name="name" id="name" autofocus autocomplete="off">
-                 <span class="modal-icon">
+                 <input type="text" class="modal-form__input" name="name" id="name" autofocus autocomplete="off">
+                 <span class="modal-form__icon">
                     <svg width="12" height="12"><use href="./images/icons.svg#person"></use>
                     </svg>
                 </span>
@@ -367,18 +368,18 @@
              <!--<li class="form-item item">-->
                     <label for="tel" class="modal-form__label">Телефон</label>
                     <div class="modal-form__field">
-                    <input type="tel" class="form-input" name="tel" id="tel">
-                    <span class="modal-icon">
+                    <input type="tel" class="modal-form__input" name="tel" id="tel">
+                    <span class="modal-form__icon">
                         <svg width="14" height="14"><use href="./images/icons.svg#phone"></use>
                         </svg>
                     </span>
                      </div>
                 
              <!--<li class="form-item item">-->
-                    <label for="mail" class="form-label">Почта</label>
+                    <label for="mail" class="modal-form__label">Почта</label>
                     <div class="modal-form__field">
-                    <input type="email" class="form-input" name="mail" id="mail">
-                    <span class="modal-icon">
+                    <input type="email" class="modal-form__input" name="mail" id="mail">
+                    <span class="modal-form__icon">
                         <svg width="16" height="12"><use href="./images/icons.svg#mail"></use>
                         </svg>
                     </span>
