--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
     <title>Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./CSS/main.css">
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body>
@@ -41,7 +42,7 @@
              <div class="container">
             <h1 class="visually-hidden">Портфолио</h1> 
             <!---Фильтр-->   
-            <ul class="project__filter filter__list">
+            <ul class="project__filter filter">
                 <li class="filter__item item">
                    <button class="filter__btn" type="button">Все</button>
                 </li>
